# enae450-final-project

./: .gitattributes  ENAE450_Final_Hibbitts_Jaegon.tgz  README.md
src/install/: local_setup.sh  setup.sh
src/install/interfacing/lib/interfacing/: Avers  FollowInside  FollowOutside  Gazebo  Gazebo_Chat  h1  halpha  (+2 more)
src/interfacing/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/interfacing/Interfacing/: Gazebo_Find_Path.py  Gazebo_Follow.py  Gazebo_Inside_Follow.py  Gazebo_h1.py  navigate_halpha.py
src/interfacing/Interfacing/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
src/interfacing/install/: local_setup.sh  setup.sh
src/interfacing/install/interfacing/lib/interfacing/: move_forward
src/interfacing/install/interfacing/share/interfacing/: package.bash  package.ps1  package.sh  package.xml
src/interfacing/interfacing/: Aversion.py  Gazebo_Inside_Follow.py  Gazebo_Outside_Follow.py  loop_around_wallfollow.py  move_forward.py  navigate.py  navigate_h1.py  navigate_halpha.py  navigate_hbeta.py
src/interfacing/interfacing/install/: setup.ps1
src/interfacing/interfacing/log/: latest_build
src/interfacing/launch/: maze0_launch.py  maze1_launch.py  maze2_launch.py
src/interfacing/log/: latest_build
src/interfacing/models/maze_0/: model.config  model.sdf
src/interfacing/models/maze_1/: model.config  model.sdf
src/interfacing/models/maze_2/: model.sdf
src/interfacing/models/tb3_4walls/: four_walls.sdf  model.config
src/interfacing/worlds/: maze_0.world  maze_1.world  maze_2.world  tb3_4walls.world
src/log/: latest_build
(+6 files in other folders)
